# PerfectGeoStorm

./: .dockerignore  .env.example  .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.dev.yml  docker-compose.yml  openapi-spec.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  publish.yml
migrations/: 001_initial_schema.sql
scripts/: generate_openapi.py  install.sh
src/: analytics.py  config.py  container.py  database.py  demo_data.py  main.py  mcp_server.py  models.py  progress.py  retention.py  scheduler.py  schemas.py
src/llm/: __init__.py  base.py  client.py  factory.py  openrouter.py
src/notifications/: dispatcher.py  email.py  slack.py  webhook.py
src/repos/: __init__.py  alert_repo.py  change_detection_repo.py  project_repo.py  provider_repo.py  response_repo.py  run_repo.py  schedule_repo.py  score_repo.py  settings_repo.py  term_repo.py
src/routes/: alerts.py  deps.py  projects.py  providers.py  runs.py  schedule.py  setup.py  terms.py
src/services/: alert_service.py  analysis.py  change_detection.py  mention_service.py  project_service.py  provider_service.py  run_service.py  schedule_service.py  scoring_service.py  settings_service.py  term_service.py
tests/: test_alert_service.py  test_analysis.py  test_analytics.py  test_change_detection.py  test_demo_mode.py  test_llm.py  test_mcp.py  test_mention_service.py  test_notifications.py  test_openapi.py  test_retention.py  test_scheduler.py  test_scoring_service.py
tests/api/: test_alerts.py  test_projects.py  test_runs.py  test_schedule.py  test_setup.py  test_terms.py
tests/e2e/: demo-isolation.spec.ts  full-journey.spec.ts  no-setup-wizard.spec.ts
web/: astro.config.mjs  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.mjs
web/src/components/: NavHeader.astro  (+4 more)
(+28 files in other folders)
